Bug 89292 - [regression,bisected] incomplete screenshots in some cases
Summary: [regression,bisected] incomplete screenshots in some cases
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: 10.5
Hardware: Other All
: medium normal
Assignee: Jason Ekstrand
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-02-24 04:32 UTC by Igor Gnatenko
Modified: 2016-07-09 00:10 UTC (History)
4 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Igor Gnatenko 2015-02-24 04:32:21 UTC
Original bugreport in GNOME: https://bugzilla.gnome.org/show_bug.cgi?id=744978

I did bisect and I found bad commit:
408e298942ffb03c00e05dce2569c291df6bec49 is the first bad commit
commit 408e298942ffb03c00e05dce2569c291df6bec49
Author: Kenneth Graunke <kenneth@whitecape.org>
Date:   Wed Dec 31 16:54:44 2014 -0800

    i965: Fix INTEL_DEBUG=optimizer with VF types.
    
    Hardcoding stderr is wrong; INTEL_DEBUG=optimizer uses other files.
    
    Signed-off-by: Kenneth Graunke <kenneth@whitecape.org>
    Reviewed-by: Matt Turner <mattst88@gmail.com>

:040000 040000 e6ba4ea8fc85285bd079600a82e419ca9b923dcc 3c26dd1c368ec6c13701bbda0f8a0395c2929eca M	src
Comment 1 Igor Gnatenko 2015-02-24 04:34:31 UTC
oops. I did bad copy/paste.

commit 9b8bd67768769b685c25e1276e053505aede5f93
Author: Kenneth Graunke <kenneth@whitecape.org>
Date:   Wed Dec 31 16:47:25 2014 -0800

    i965: Show opt_vector_float() and later passes in INTEL_DEBUG=optimizer.
    
    In order to support calling opt_vector_float() inside a condition, this
    patch makes OPT() a statement expression:
    
    https://gcc.gnu.org/onlinedocs/gcc/Statement-Exprs.html
    
    We've used that elsewhere already.
    
    Signed-off-by: Kenneth Graunke <kenneth@whitecape.org>
    Reviewed-by: Matt Turner <mattst88@gmail.com>
Comment 2 Ian Romanick 2015-02-24 17:42:35 UTC
This commit is in the 10.5 branch.

Ken: Could you take a look at this?

Igor: Can you try running Mesa with INTEL_DEBUG=vs,gs at commit 6171131 (the commit before your bisect) and at commit 9b8bd67 and attach the output?  We ought to be able to figure out what went wrong by looking at the difference in generated GPU assembly.
Comment 3 Igor Gnatenko 2015-02-24 17:49:05 UTC
(In reply to Ian Romanick from comment #2)
> This commit is in the 10.5 branch.
> 
> Ken: Could you take a look at this?
> 
> Igor: Can you try running Mesa with INTEL_DEBUG=vs,gs at commit 6171131 (the
> commit before your bisect) and at commit 9b8bd67 and attach the output?  We
> ought to be able to figure out what went wrong by looking at the difference
> in generated GPU assembly.

you mean `export INTEL_DEBUG=vs,gs` and run `startx` or how I can set it?
Comment 4 Matt Turner 2015-02-24 19:29:47 UTC
Thanks for the report.

I'm doubtful that the bisected commit is at fault. It's just adding some extra debugging capabilities and shouldn't change anything else at all.

Could you reconfirm the bisection?
Comment 5 Rui Tiago Matos 2015-02-27 17:38:23 UTC
My bisect yielded:

# bad: [d1e21325cf3c394f5fb28808a113826ea3b7f54b] gallium/hud: also try R8_UNORM format for font texture
# good: [a4ffc2a445055a81a655e64d57ee393a14a2eb16] i965: Move fs_visitor ra pass to new fs_visitor::allocate_registers()
git bisect start '10.5-branchpoint' '10.4-branchpoint'
# good: [eaae92a349af1fd6641c4bdd4bfd1185b1b6fe3e] st/mesa: fix GL_PRIMITIVE_RESTART_FIXED_INDEX
git bisect good eaae92a349af1fd6641c4bdd4bfd1185b1b6fe3e
# good: [aa479a69d6c9710be4d1c63e706f869bb97ad127] nir: silence compiler warning from visit_src() call
git bisect good aa479a69d6c9710be4d1c63e706f869bb97ad127
# bad: [291d7ef84dcd83962515cbd7ce91ce1ff70930ed] mesa: improve error messaging for format CSV parser
git bisect bad 291d7ef84dcd83962515cbd7ce91ce1ff70930ed
# bad: [8bbc5e27810a005b8e0c89ab1016a5ba6cff73d2] st/nine: Remove duplicated code for ps texcoord input declaration
git bisect bad 8bbc5e27810a005b8e0c89ab1016a5ba6cff73d2
# good: [76086d7120152ebced634875889612d0c40a37bb] mesa: change assert to unreachable in two format functions
git bisect good 76086d7120152ebced634875889612d0c40a37bb
# bad: [d2f2a550cf590ec1c9c4d94e07e1f0a0c837f891] st/nine: Add new texture format strings
git bisect bad d2f2a550cf590ec1c9c4d94e07e1f0a0c837f891
# bad: [ef0499af255ecd3a9abbd350ace5e00a744adc00] i965/pixel_read: Use meta_pbo_GetTexSubImage for PBO ReadPixels
git bisect bad ef0499af255ecd3a9abbd350ace5e00a744adc00
# good: [404660e3c7bc6d13ae1d40185a02bfff6b956ac9] i965/mipmap_tree: Add a depth parameter to create_for_bo
git bisect good 404660e3c7bc6d13ae1d40185a02bfff6b956ac9
# good: [e24d17e08cb19bbecadb22ed43b25eeec26cde27] formats: Use a hash table for _mesa_format_from_array_format
git bisect good e24d17e08cb19bbecadb22ed43b25eeec26cde27
# good: [8546fe900ca4c6059614dae8a77b3a97fafeb629] meta: Add an implementation of GetTexSubImage for PBOs
git bisect good 8546fe900ca4c6059614dae8a77b3a97fafeb629
# first bad commit: [ef0499af255ecd3a9abbd350ace5e00a744adc00] i965/pixel_read: Use meta_pbo_GetTexSubImage for PBO ReadPixels
Comment 6 Matt Turner 2015-02-27 19:31:45 UTC
(In reply to Rui Tiago Matos from comment #5)
> My bisect yielded:
> 
> # first bad commit: [ef0499af255ecd3a9abbd350ace5e00a744adc00]
> i965/pixel_read: Use meta_pbo_GetTexSubImage for PBO ReadPixels

Thanks! That's much more believable.

There have been some fixes specifically for this commit, so retesting master is probably advisable. I'm adding a couple of related bugs to the See Also field.
Comment 7 Jason Ekstrand 2015-02-27 20:30:28 UTC
This is a bug in the meta PBO path due to GNOME Shell's scissor settings affecting the download.  I've put together a patch:

http://lists.freedesktop.org/archives/mesa-dev/2015-February/078074.html
Comment 8 Rui Tiago Matos 2015-02-28 18:53:56 UTC
(In reply to Jason Ekstrand from comment #7)
> This is a bug in the meta PBO path due to GNOME Shell's scissor settings
> affecting the download.  I've put together a patch:
> 
> http://lists.freedesktop.org/archives/mesa-dev/2015-February/078074.html

That fixes it for me, thanks
Comment 9 Matt Turner 2015-03-04 22:11:52 UTC
Should be fixed by

commit b1ab02d9c0cc11ba8ef4efaba9452d644b6a0811
Author: Jason Ekstrand <jason.ekstrand@intel.com>
Date:   Fri Feb 27 12:29:03 2015 -0800

    meta/TexSubImage: Stash everything other than PIXEL_TRANSFER/store in meta_begin


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.